--- a/app/assets/stylesheets/movements.scss
+++ b/app/assets/stylesheets/movements.scss
@@ -1,7 +1,9 @@
 // Place all the styles related to the movements controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "bootstrap-material-design";
 .edition{
 	box-shadow: none !important;
 	padding: 0!important;
