--- a/app/views/history_movements/report.pdf.erb
+++ b/app/views/history_movements/report.pdf.erb
@@ -9,6 +9,20 @@
         font-size: 10px;
         padding: 3px 1.5px;
     }
+    thead{
+        margin-bottom: 10em;
+        margin-top: 2em;
+    }
+    tbody tr{
+        background: #BFBFBF;
+    }
+    .nobreak:before{
+        clear: both;
+    }
+    .nobreak {
+        page-break-inside: avoid;
+    }
+        /*page-break-before: always !important;*/
     td {
         font-family: Serif,"Times New Roman",Georgia;
         font-size: 8.5px;
@@ -40,7 +54,7 @@
 
     <tbody>
         <% @movements.each do |movement| %>
-        <tr>
+        <tr class="nobreak">
             <td><%= Account.find(movement.account_id).name %></td>
             <td><%= movement.concepto_de_pago %></td>
             <!-- style="word-wrap:break-word;" -->
