--- a/app/views/accounts/_formulario.html.erb
+++ b/app/views/accounts/_formulario.html.erb
@@ -1,3 +1,5 @@
+
+
 <div id="account-modal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -17,7 +19,7 @@
             </div>
 
             <div class="modal-footer">
-                <%= f.submit class:"btn btn-primary btn-lg btn-block" , value:"Guardar"%>
+                <%= f.submit class:"btn btn-lg btn-block" , value:"Guardar",style:"background-color:#FF7043;color:white;"%>
             </div>
             <% end %>
 
@@ -27,3 +29,6 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+<script>
+  $("#dropdown-menu select").dropdown();
+</script>
