--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,18 +3,21 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#323131!important;" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
+                    </button> -->
                     <!-- = link_to image_tag("logo.png"), root_path,class: "navbar-brand",style:"display: inline-block;"%> -->
+<div class="navbar-brand" href"#">
+
 
                     <% unless logged_in? %>
-                    <%= link_to image_tag("logo.png", alt: "logo", size:"175x75"), root_path, class: 'navbar-brand '%>
+                    <%= link_to image_tag("logo.png", alt: "logo", size:"175x50"), root_path%>
                     <%else %>
-                    <%= link_to image_tag("logo.png", alt: "logo", size:"175x75"), current_user, class: 'navbar-brand '%>
+                    <%= link_to image_tag("logo.png", alt: "logo", size:"175x50"), current_user%>
                     <%end %>
+</div>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
