borrar botones y subir estilos

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,4 +22,6 @@
  # Or if using bootstrap v3:
  *= require bootstrap-datepicker3
  */
-@import "bootstrap-sprockets";
+ @import "bootstrap";
+ @import "bootstrap-material-design";
+ @import "bootstrap-sprockets";
