--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,11 +59,11 @@
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><%= link_to "Profile", current_user %></li>
-                                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+
+                                <li><%= link_to "Ajustes", edit_user_path(current_user) %></li>
                                 <li class="divider"></li>
                                 <li>
-                                    <%= link_to "Log out", logout_path, method: "delete" %>
+                                    <%= link_to "Salir", logout_path, method: "delete" %>
                                 </li>
                             </ul>
                         </li>
