--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
         <script src="material.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="dist/css/ripples.min.css">
+        <!-- <link rel="stylesheet" type="text/css" href="dist/css/ripples.min.css"> -->
 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
         <%= render 'layouts/header' %>
         <!-- agrega el parcial de header -->
         <div class="container">
