--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -34,7 +34,7 @@
             <a><%=link_to "Reset", user_categories_path(current_user)%></a>
         </li>
     </ul>
-  
+
 </div>
 </div>
 
@@ -47,12 +47,12 @@
 </div>
 <div class='back'>
     <br>
-    <p><%= Category.resolverEstado(category.classification ) %></p>
+    <p style="font-weight:bolder;padding-top:30%;"><%= Category.resolverEstado(category.classification ) %></p>
 
     <%= link_to raw("<i class='material-icons '>edit</i>"),edit_user_category_path(current_user,category.id) ,remote: true,class:"btn btn-success center ",style:"display: inline-block; width:3em; padding:0!important; position:absolute; bottom:0;
     left:0;"%>
     <%= link_to raw("<i class='material-icons '>delete_sweep</i>"),user_category_path(current_user,category.id),class:"btn btn-raised btn-warning center" ,style:"background-color: #FF3333!important;display: inline-block; width:3em; padding: 0!important;
-    position:absolute; bottom:0; right:0;", method: :delete, data: { confirm: 'Are you sure?' } %>
+    position:absolute; bottom:0; right:0;", method: :delete, data: { confirm: '¿Estas seguro?' } %>
 
 </div>
 </div>
