--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
             <br>
             <%= render 'layouts/footer' %>
             <!-- agrega el parcial de footer -->
-            <%= debug(params) if Rails.env.development? %>
+             <!-- debug(params) if Rails.env.development? %> -->
         </div>
     </body>
 </html>
