--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -7,7 +7,7 @@
 }
 .search {
   position: fixed;
-  bottom:10%;
+  bottom: 7%;
   color: white;
   background: #03A8F2;
   width: 80px;
@@ -66,7 +66,7 @@ tr > td:nth-child(9) {
 <div class="container">
     <div class="boton">
         <div class="search" id="search">
-            <%=link_to 'assignment', new_user_account_movement_path(current_user),remote:true,class:' btn btn_new_mvnt material-icons' ,style:" color:white; font-size:50px; box-shadow:none;;" %>
+            <%=link_to 'assignment', new_user_account_movement_path(current_user),remote:true,class:' btn btn_new_mvnt material-icons' ,style:" color:white; font-size:50px; box-shadow:none;" %>
         </div>
     </div>
 </div>
