--- a/app/views/movements/_clone_form.html.erb
+++ b/app/views/movements/_clone_form.html.erb
@@ -1,4 +1,16 @@
-<%= form_for :movement, remote: true do |f| %>
+<div id="movement_clone-modal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title center">Nuevo Movimiento</h4>
+            </div>
+          <%= form_for :movement, remote: true do |f| %>
+            <div class="modal-body">
+                <div class="alert alert-danger" role="alert" style="display: none;"></div>
+
 <%= f.hidden_field :account_id, :value => params[:account_id] %>
 <%= f.hidden_field :user_id, :value => params[:user_id] %>
 
@@ -10,6 +22,16 @@
 <td><%= f.text_field :withdrawal,placeholder:"Retiro", size: 10, value: 0, autocomplete: :off %></td>
 <td><%= f.text_field :deposit,placeholder:"Deposito", size: 10, value: 0, autocomplete: :off %></td>
 
-<%= f.submit class:"btn btn-primary btn-lg btn-block", value: "Crear Movimiento" %>
 
-<% end %>
+
+
+            <div class="modal-footer">
+                <%= f.submit class:"btn btn-primary btn-lg btn-block" , value:"Guardar"%>
+            </div>
+            <% end %>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
