--- a/app/views/movements/_clone_form.html.erb
+++ b/app/views/movements/_clone_form.html.erb
@@ -44,7 +44,7 @@ background: #03A8F2;
 </style>
 
 
-<div id="movement_clone-modal" class="modal fade">
+<!-- <div id="movement_clone-modal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -57,21 +57,21 @@ background: #03A8F2;
             <div class="modal-body">
                 <div class="alert alert-danger" role="alert" style="display: none;"></div>
 
-                <%=link_to raw("<i class='material-icons md-24'>monetization_on</i>"),nil, class:"btn btn-raised btn-info edition", id:"boton_agregar"%>
-                <%=link_to raw("<i class='material-icons md-24'>timeline</i>"),nil, class:"btn btn-raised btn-info edition"%>
-                <%=link_to raw("<i class='material-icons md-24'>business</i>"),nil, class:"btn btn-raised btn-info edition"%>
+
 
             <div class="modal-footer">
 
             </div>
-            <% end %>
-        </div>
+            <% end %> -->
+        <!-- </div> -->
         <!-- /.modal-content -->
-    </div>
+    <!-- </div> -->
     <!-- /.modal-dialog -->
-</div>
+<!-- </div> -->
 <!-- /.modal -->
-
+<!-- link_to raw("<i class='material-icons md-24'>monetization_on</i>"),nil, class:"btn btn-raised btn-info edition", id:"boton_agregar"%>
+link_to raw("<i class='material-icons md-24'>timeline</i>"),nil, class:"btn btn-raised btn-info edition"%>
+link_to raw("<i class='material-icons md-24'>business</i>"),nil, class:"btn btn-raised btn-info edition"%> -->
 <!-- <script type="text/javascript">
 function iva(){
  this.iniciar = function(){
