--- a/app/views/movements/movement_child.html.erb
+++ b/app/views/movements/movement_child.html.erb
@@ -1,69 +1,289 @@
 <style>
-th{
-  padding: 10px 25px;
-}
-td{
-  padding: 10px 25px;
-  text-align: center;
-  background: white;
-}
-tbody tr:hover td{
-  background: #cfd8dc !important;
-}
-.btn_child{
-  border-radius: 50px;
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  bottom: 5%;
-  left: 10px;
-}
-.btn_child i.material-icons{
-  font-size:60px;
-  margin-left:-20px;
-  margin-top: 2px;
-}
-.btn_child:hover{
-  background:#00bfa5 !important;
-}
-tr > td:nth-child(7) {
-  text-align: right;
-  font-weight: bold;
-  color:rgba(214, 13, 13, 0.86);
-  background-color: rgba(214, 13, 13, 0.20);
-}
-tr > td:nth-child(8) {
-  text-align: right;
-  font-weight: bold;
-  color:rgba(13, 154, 214, 0.86);
-  background-color: rgba(13, 154, 214, 0.20);
-}
+    th {
+        padding: 10px 25px;
+    }
+    td {
+        padding: 10px 25px;
+        text-align: center;
+        background: white;
+    }
+    tbody tr:hover td {
+        background: #cfd8dc !important;
+    }
+    .btn_child {
+        border-radius: 50px;
+        width: 80px;
+        height: 80px;
+        position: absolute;
+        bottom: 5%;
+        left: 10px;
+    }
+    .btn_child i.material-icons {
+        font-size: 60px;
+        margin-left: -20px;
+        margin-top: 2px;
+    }
+    .btn_child:hover {
+        background: #00bfa5 !important;
+    }
+    tr > td:nth-child(7) {
+        text-align: right;
+        font-weight: bold;
+        color: rgba(214, 13, 13, 0.86);
+        background-color: rgba(214, 13, 13, 0.20);
+    }
+    tr > td:nth-child(8) {
+        text-align: right;
+        font-weight: bold;
+        color: rgba(13, 154, 214, 0.86);
+        background-color: rgba(13, 154, 214, 0.20);
+    }
+
+    .search {
+        position: fixed;
+        left: 2px;
+        top: 12%;
+
+        color: white;
+        background: #03A8F2;
+
+        width: 80px;
+        height: 80px;
+        border-radius: 75px;
+        float: left;
+        cursor: pointer;
+    }
+    .search i.material-icons {
+        padding-left: 0;
+        padding-top: 0;
+        font-size: 60px;
+    }
+    .search:hover {
+        background: #614381;
+
+    }
+
+    .search2 {
+        position: fixed;
+        left: 2px;
+        top: 30%;
+
+        color: white;
+        background: #03A8F2;
+
+        width: 80px;
+        height: 80px;
+        border-radius: 75px;
+        float: left;
+        cursor: pointer;
+    }
+    .search2 i.material-icons {
+        padding-left: 0;
+        padding-top: 0;
+        font-size: 60px;
+    }
+    .search2:hover {
+        background: #614381;
+
+    }
+
+    .btn {
+        width: 300px;
+        height: 50px!important;
+        align-items: center;
+
+    }
+    #dropdown-pa {
+        position: fixed;
+        right: 2px;
+        top: 10%;
+
+        color: white;
+        background: #614381;
+
+        float: left;
+        cursor: pointer;
+    }
+
 </style>
 <% @movi =  Account.first.movements.find(params[:id]) %>
 <table>
-  <thead>
-    <th>Concepto de Pago</th>
-    <th>Referencia</th>
-    <th>Fecha</th>
-    <th>Mes</th>
-    <th>Detalle</th>
-    <th>Categoria</th>
-    <th style="color:rgba(214, 13, 13, 0.86);">Retiro</th>
-    <th style="color:rgba(13, 154, 214, 0.86);">Deposito</th>
-
-  </thead>
-  <tbody>
-    <tr>
-      <td><%= @movi.concepto_de_pago %></td>
-      <td><%= @movi.reference %></td>
-      <td><%= @movi.date.strftime('%d/%m/%Y') %></td>
-      <td><%= ApplicationRecord.month(@movi.date) %></td>
-      <td><%= @movi.detail %></td>
-      <td><%= Category.find(@movi.category_id).name %></td>
-
-    </tr>
-  </tbody>
+    <thead>
+        <th>Concepto de Pago</th>
+        <th>Referencia</th>
+        <th>Fecha</th>
+        <th>Mes</th>
+        <th>Detalle</th>
+        <th>Categoria</th>
+        <th style="color:rgba(214, 13, 13, 0.86);">Retiro</th>
+        <th style="color:rgba(13, 154, 214, 0.86);">Deposito</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td><%= @movi.concepto_de_pago %></td>
+            <td><%= @movi.reference %></td>
+            <td><%= @movi.date.strftime('%d/%m/%Y') %></td>
+            <td><%= ApplicationRecord.month(@movi.date) %></td>
+            <td><%= @movi.detail %></td>
+            <td><%= Category.find(@movi.category_id).name %></td>
+            <td><%= number_to_currency(@movi.withdrawal, locale: :es, separator: '.', delimiter: ',') %></td>
+            <td><%= number_to_currency(@movi.deposit, locale: :es, separator: '.', delimiter: ',') %></td>
+        </tr>
+    </tbody>
 </table>
+
+<div class="">
+    <!-- link_to raw("<i class='material-icons md-24'>monetization_on</i>"),nil, class:"btn btn-raised btn-info edition", id:"boton_agregar"%> -->
+
+    <div class="search" id="boton_agregar">
+        <i class="material-icons">monetization_on</i>
+    </div>
+
+    <!-- <div class="search2" id="boton_agregar_irc">
+<i class="material-icons">timeline</i>
+</div> -->
+
+    <div class="search2" id="boton_movements">
+        <i class="material-icons">business</i>
+    </div>
+
+    <div class="panel panel-info" id="iva-porc" style="display:none; position:absolute;top:15%;">
+        <div class="panel-heading">
+            <h3 class="panel-title center" style="font-weight: bold;">Buscar</h3>
+        </div>
+        <div class="panel-body">
+            <%= form_tag( add_movement_child_path(@movi) , method: "post") do %>
+            <script></script>
+            <!-- text_field_tag :concepto_de_pago,value: Movement.find(params[:id]).concepto_de_pago << " subtotal" %>
+         text_field_tag :reference, value: Movement.find(params[:id]).reference << " subtotal" %> -->
+
+            <% amount =  @movi.deposit - @movi.withdrawal %>
+            <% subtotal =  (amount / 1.16).round(2)  %>
+            <% iva =  (amount - subtotal).round(2) %>
+            <div class="input-group">
+                <%= label_tag(:subtotal, "Subtotal:") %>
+                <span class="input-group-addon">$</span>
+                <%= text_field_tag :subtotal, nil, autocomplete: :off, value: subtotal, class: "form-control" %>
+            </div>
+            <div class="input-group">
+                <%= label_tag(:porcentaje, "Iva:") %>
+                <%= text_field_tag :porcentaje, nil, autocomplete: :off, value: 16 , class: "form-control"%>
+                <span class="input-group-addon">%</span>
+            </div>
+            <div class="input-group">
+            <%= label_tag(:iva, "Aplicar un iva de") %>
+                <span class="input-group-addon">$</span>
+                <%= text_field_tag :iva, nil, autocomplete: :off, value: iva, class: "form-control" %>
+            </div>
+
+            <div class="field center">
+                <%= submit_tag("Aplicar", class: "btn btn-primary") %>
+            </div>
+            <% end %>
+        </div>
+    </div>
+
+    <div class="panel panel-info" id="irc" style="display:none; position:absolute;top:15%;">
+        <div class="panel-heading">
+            <h3 class="panel-title center" style="font-weight: bold;">Buscar</h3>
+        </div>
+        <div class="panel-body">
+            <%= form_tag( nil , method: "post") do %>
+            <script></script>
+            <!-- text_field_tag :concepto_de_pago,value: Movement.find(params[:id]).concepto_de_pago << " subtotal" %>
+         text_field_tag :reference, value: Movement.find(params[:id]).reference << " subtotal" %> -->
+
+            <% amount =  (@movi.deposit - @movi.withdrawal)/1.16  %>
+            <% iva =  amount * 0.16  %>
+            <div class="field">
+                <%= label_tag(:iva, "Aplicar un iva de:") %>
+                <%= text_field_tag :subtotal, nil, autocomplete: :off, value: amount %>
+            </div>
+            <div class="field">
+                <%= text_field_tag :iva, nil, autocomplete: :off, value: iva %>
+
+            </div>
+            <div class="field">
+                <%= label_tag(:iva, "Aplicar un iva de:") %>
+                <%= text_field_tag :iva, nil, autocomplete: :off, value: 16 %>
+            </div>
+            <div class="field center">
+                <%= submit_tag("Aplicar", class: "btn btn-primary") %>
+            </div>
+            <% end %>
+        </div>
+    </div>
+
+    <div class="panel panel-info" id="movements" style="display: none; position:absolute;top:15%;">
+        <div class="panel-heading">
+            <h3 class="panel-title center" style="font-weight: bold;">Buscar</h3>
+        </div>
+        <div class="panel-body">
+            <%= form_for :movement, remote: true do |f| %>
+            <div class="modal-body">
+                <div class="alert alert-danger" role="alert" style="display: none;"></div>
+                <%= f.hidden_field :account_id, :value => params[:account_id] %>
+                <%= f.hidden_field :user_id, :value => params[:user_id] %>
+
+                <div class="horizontal">
+                    <%= f.label "Concepto de pago" %>
+                    <%= f.text_field :concepto_de_pago ,class: 'form-control', size: 40 %>
+                </div>
+
+                <div style="width:7em" class="horizontal">
+                    <%= f.label "Referencia" %>
+                    <%= f.text_field :reference ,class: 'form-control', placeholder:"Sin referencia", autocomplete: :off %>
+                </div>
+
+                <div class="input-group date horizontal" style="width: 5.5em">
+                    <%= f.label "Fecha" %>
+                    <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true,autocomplete: :off %>
+                </div>
+
+                <div class="horizontal">
+                    <%= f.label "Detalles" %>
+                    <%= f.text_field :detail ,class: 'form-control', size: 40, autocomplete: :off %>
+                </div>
+
+                <div class="horizontal" style="width: 10em; top:20px;">
+                    <!-- class="field" -->
+                    <%= f.label "Categoria"%>
+                    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
+                </div>
+
+                <div class="horizontal" style="width: 6em">
+                    <%= f.label "Retiro"%>
+                    <%= f.text_field :withdrawal, size: 10, class: 'form-control dig', value: 0, autocomplete: :off %>
+                </div>
+
+                <div class="horizontal" style="width: 6em">
+                    <%= f.label "Deposito"%>
+                    <%= f.text_field :deposit, class: 'form-control dig', size: 10, value: 0, autocomplete: :off %>
+                </div>
+
+            </div>
+
+            <%= f.submit class:"btn btn-primary btn-lg btn-block", value: "Crear Movimiento"%>
+
+            <% end %>
+        </div>
+    </div>
+
+    <!-- link_to raw("<i class='material-icons md-24'>timeline</i>"),nil, class:"btn btn-raised btn-info edition"%> -->
+    <!-- link_to raw("<i class='material-icons md-24'>business</i>"),nil, class:"btn btn-raised btn-info edition"%> -->
+</div>
 
 <%= link_to raw("<i class='material-icons'>add_to_photos</i>"), create_clone_user_account_movement_path(current_user,params[:account_id]),remote:true, class: 'btn btn-primary btn_child'%>
 <%= link_to raw("<i class='material-icons'>backspace</i>"), user_account_movements_path(current_user,params[:account_id]), class: 'btn btn-primary btn_child', style:"bottom: 20%;" %>
+
+<script>
+    $(document).ready(function () {
+        $("#boton_agregar").click(function () {
+            $("#iva-porc").toggle();
+        });
+
+        $("#boton_movements").click(function () {
+            $("#movements").toggle();
+        });
+    });
+</script>
